--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="./src/assets/icon-192x192.png">
-    <link rel="manifest" href="./manifest.json">
+    <link rel="icon" href="icons/icon-192x192.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Stock Manager</title>
   </head>
